feat: Add Coach Schedule navigation and formatted WOD PDF download

--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,9 @@
                 "destination": "/index.html"
             }
         ]
+    },
+    "storage": {
+        "rules": "storage.rules",
+        "bucket": "almodovarbox-b456a.firebasestorage.app"
     }
 }
