--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,9 @@
             }
         ]
     },
+    "firestore": {
+        "rules": "firestore.rules"
+    },
     "storage": {
         "rules": "storage.rules",
         "bucket": "almodovarbox-b456a.firebasestorage.app"
