--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build && firebase deploy --only hosting --project almodovar-box-2026"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
     "html2pdf.js": "^0.12.1",
